# TrustTheBacktest

./: README.md  pyproject.toml
notebooks/: 01_pbo_demo.ipynb
src/trustthebacktest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trustthebacktest/metrics/: performance.py
src/trustthebacktest/overfitting/: cscv.py  pbo.py
src/trustthebacktest/plotting/: plots.py
