[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustthebacktest"
version = "0.1.0"
description = "Probability of Backtest Overfitting (PBO) + CSCV toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "scipy", "matplotlib"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]


